--- a/MassAutoGarage/Views/HR_LeaveRequest/LeaveRequestList.cshtml
+++ b/MassAutoGarage/Views/HR_LeaveRequest/LeaveRequestList.cshtml
@@ -34,18 +34,96 @@
 
     fieldset {
         border: solid;
-        border-color: #181616;
+        border-color: #151529;
         border-width: thin;
     }
 
     legend {
         float: none;
-        width: 29%;
+        width: 42%;
         background-color: #bbb1b1;
         color: white;
         padding: 5px 10px;
         font-size: small;
-        margin-bottom: 20px;
+    }
+
+    input {
+        margin: 5px;
+    }
+
+
+    #fieldsetRequestFor {
+        border: solid;
+        border-color: #151529;
+        border-width: thin;
+    }
+
+    #legendRequestFor {
+        float: none;
+        width: 15%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 5px 10px;
+        font-size: small;
+    }
+
+    #fieldsetCertificate {
+        border: solid;
+        border-color: #151529;
+        border-width: thin;
+    }
+
+    #legendCertificate {
+        float: none;
+        width: 13%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 4px 9px;
+        font-size: small;
+    }
+
+    #fieldsetCashAdvance {
+        border: solid;
+        border-color: #151529;
+        border-width: thin;
+    }
+
+    #legendCashAdvance {
+        float: none;
+        width: 35%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 4px 9px;
+        font-size: small;
+    }
+
+    #legendLeaveDate {
+        float: none;
+        width: 10%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 4px 9px;
+        font-size: small;
+    }
+
+
+    #legendAirTicket {
+        float: none;
+        width: 20%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 4px 9px;
+        font-size: small;
+    }
+
+
+    #legendApplyForSickLeave {
+        float: none;
+        width: 40%;
+        background-color: #bbb1b1;
+        color: white;
+        padding: 4px 9px;
+        font-size: small;
     }
 </style>
 
@@ -93,21 +171,10 @@
                                 <th style=" width: 1%;">S.N.</th>
                                 <th>Voucher No</th>
                                 <th>Employee Name</th>
-                                @*<th>Date</th>*@
                                 <th>Designation</th>
                                 <th>EmpNo</th>
                                 <th>Company Name</th>
                                 <th>Department Name</th>
-                                @*<th>Branch Name</th>*@
-                                <th>From Date</th>
-                                <th>To Date</th>
-                                @*<th>Date Of Joining</th>
-                                    <th>Airport Name</th>
-                                    <th>AirPort From Name</th>
-                                    <th>AirPort To Name</th>
-                                    <th>Email</th>
-                                    <th>Mobile No</th>
-                                    <th>Medical Certificate File</th>*@
                                 <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
@@ -119,26 +186,16 @@
                                     <td data-th="Srl.No.">@i</td>
                                     <td data-th="Srl.No.">@item.VoucherNo</td>
                                     <td data-th="Code">@item.EmployeeName</td>
-                                    @*<td data-th="Srl.No.">@item.Date</td>*@
                                     <td data-th="Srl.No.">@item.Designation</td>
                                     <td data-th="Srl.No.">@item.EmpNo</td>
                                     <td data-th="Srl.No.">@item.CompanyName</td>
                                     <td data-th="Srl.No.">@item.DepartmentName</td>
-                                    @*<td data-th="Srl.No.">@item.BranchName</td>*@
-                                    <td data-th="Srl.No.">@item.LeaveFromDate</td>
-                                    <td data-th="Srl.No.">@item.LeaveToDate</td>
-                                    @*<td data-th="Srl.No.">@item.DateOfJoining</td>
-                                        <td data-th="Srl.No.">@item.AirportName</td>
-                                        <td data-th="Srl.No.">@item.FromAirportName</td>
-                                        <td data-th="Srl.No.">@item.ToAirportName</td>
-                                        <td data-th="Srl.No.">@item.Email</td>
-                                        <td data-th="Srl.No.">@item.MobileNo</td>
-                                        <td data-th="Color Code">
-                                            <a href="@item.MedicalCertificateFile" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Download <i class="fa fa-edit"></i></a>
-                                        </td>*@
-
                                     <td data-th="Action">
                                         <div class="d-flex gap-2">
+                                            <div>
+                                                <a href="javascript:void(0)" onclick="return ViewLeaveRequest('@item.Idincrept')" class="btn btn-sm btn-primary remove-item-btn">View <i class="fa fa-eye" aria-hidden="true"></i></a>
+                                            </div>
+
                                             <div class="edit">
                                                 <a href="/HR_LeaveRequest/LeaveRequest?Id=@item.Idincrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
                                             </div>
@@ -153,6 +210,218 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="LeaveRequestModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="LeaveRequestModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="LeaveRequestModalLabel"><strong>Leave Request Details</strong></h5>
+                <button type="button" class="btn-close btn btn-danger" data-bs-dismiss="modal" aria-label="Close" onclick="return RemoveTableRecords();"></button>
+            </div>
+            <div class="modal-body">
+
+
+                <div class="card-body">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+                            <fieldset>
+                                <legend style="background-color:#151529">( Please Fill In The Information Inside The Box And Line Provided )</legend>
+
+                                <div class="row gy-4" style="margin-bottom:15px;">
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Voucher No <code>*</code></label>
+                                        <input type="text" id="txtVoucherNo" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Employee Name <code>*</code></label>
+                                        <input type="text" id="txtEmployeeName" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Date<code>*</code></label>
+                                        <input type="text" id="txtDate" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Designation<code>*</code></label>
+                                        <input type="text" id="txtDesignation" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Emp No<code>*</code></label>
+                                        <input type="text" id="txtEmpNo" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Company<code>*</code></label>
+                                        <input type="text" id="txtCompany" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Department<code>*</code></label>
+                                        <input type="text" id="txtDepartment" class="form-control" readonly="readonly" />
+                                    </div>
+
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Branch<code>*</code></label>
+                                        <input type="text" id="txtBranch" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-4">
+                                        <label for="labelInput" class="form-label">Date Of Joining<code>*</code></label>
+                                        <input type="text" id="txtDateOfJoining" class="form-control" readonly="readonly" />
+                                    </div>
+
+
+                                </div>
+                            </fieldset>
+                        </div>
+
+                        <div class="row gy-4">
+                            <fieldset style="margin-top:50px;" id="fieldsetCashAdvance">
+                                <legend style="background-color:#151529;" id="legendCashAdvance">Type Of Leave (Please Tick Whichever Is Applicable)</legend>
+
+                                <div class="row gy-4" style="margin-bottom: 15px; padding-left: 10px; padding-right: 10px;">
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="MarriageLeave" readonly="readonly" /> MarriageLeave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="AnnualLeave" readonly="readonly" /> AnnualLeave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="AuthorizedUnpaidLeave" readonly="readonly" /> AuthorizedUnpaidLeave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="EmergencyLeave" readonly="readonly" /> EmergencyLeave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="SickLeave" readonly="readonly" /> SickLeave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="MaternityLeave" readonly="readonly" /> Maternity/Paternity Leave
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="Others" readonly="readonly" /> Others
+                                        </label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <input type="text" id="txtPleaseSpecifyOtherLeave" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control">
+                                            <input type="checkbox" class="row-form" id="LocalLeave" readonly="readonly" /> LocalLeave
+                                        </label>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+
+
+                        <div class="row gy-4">
+                            <fieldset style="margin-top:50px;" id="fieldsetCashAdvance">
+                                <legend style="background-color:#151529;" id="legendLeaveDate">Leave Date</legend>
+
+                                <div class="row gy-4" style="margin-bottom: 15px; padding-left: 10px; padding-right: 10px;">
+                                    <div class="col-xxl-6 col-md-6">
+                                        <label for="labelInput" class="form-label">From Date<code>*</code></label>
+                                        <input type="text" id="txtLeaveFromDate" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-6 col-md-6">
+                                        <label for="labelInput" class="form-label">To Date<code>*</code></label>
+                                        <input type="text" id="txtLeaveToDate" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+
+                        <div class="row gy-4">
+                            <fieldset style="margin-top:50px;" id="fieldsetCashAdvance">
+                                <legend style="background-color:#151529;" id="legendAirTicket">Air Ticket (As Per Eligibility)</legend>
+
+                                <div class="row gy-4" style="margin-bottom: 15px; padding-left: 10px; padding-right: 10px;">
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label for="labelInput" class="form-label">AirPort Name<code>*</code></label>
+                                        <input type="text" id="txtAirportName" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label for="labelInput" class="form-label">AirPort From Name<code>*</code></label>
+                                        <input type="text" id="txtFromAirportName" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label for="labelInput" class="form-label">AirPort To Name<code>*</code></label>
+                                        <input type="text" id="txtToAirportName" class="form-control" readonly="readonly" />
+
+                                    </div>
+
+                                </div>
+                            </fieldset>
+                        </div>
+
+                        <div class="row gy-4">
+                            <fieldset style="margin-top:50px;" id="fieldsetCashAdvance">
+                                <legend style="background-color:#151529;" id="legendApplyForSickLeave">Please Fill In The Information Below To Apply For Sick Leave</legend>
+
+                                <div class="row gy-4" style="margin-bottom:15px; padding-left: 10px; padding-right: 10px;">
+                                    <div class="col-xxl-12 col-md-12">
+                                        <label for="labelInput" class="form-label">Reason For Sick Leave<code>*</code></label>
+                                        <input type="text" id="txtReasonforSickLeave" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <label class="form-control" style="text-align:end;font-size:12px;"><b>Medical Certificate : </b></label>
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4">
+                                        <input type="text" id="txtMedicalCertificate" class="form-control" readonly="readonly" />
+
+                                    </div>
+                                    <div class="col-xxl-4 col-md-4" style="display:none" id="divhdfuploadfile">
+                                        <label class="form-control">
+                                            <input type="file" id="MedicalCertificateFile" />
+                                            <input type="text" id="txtMedicalCertificateFile" class="form-control" readonly="readonly" />
+
+                                        </label>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <div class="row gy-4" style="margin-top:10px; padding-left: 10px; padding-right: 10px;">
+                            <div class="col-xxl-6 col-md-6" style="padding-left: 10px; padding-right: 10px;">
+                                <label for="labelInput" class="form-label">Email Id <code>*</code></label>
+                                <input type="text" id="txtEmail" class="form-control" readonly="readonly" />
+
+                            </div>
+                            <div class="col-xxl-6 col-md-6" style="padding-left: 10px; padding-right:15px;">
+                                <label for="labelInput" class="form-label">Mobile Number<code>*</code></label>
+                                <input type="text" id="txtMobileNo" class="form-control" readonly="readonly" />
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                @*<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>*@
             </div>
         </div>
     </div>
