--- a/MassAutoGarage/Views/HR_RenualAndNonRenwal/RenualAndNonRenwalList.cshtml
+++ b/MassAutoGarage/Views/HR_RenualAndNonRenwal/RenualAndNonRenwalList.cshtml
@@ -97,8 +97,6 @@
                                 <th>Designation</th>
                                 <th>Department</th>
                                 <th>Branch</th>
-                                <th>Renew</th>
-                                <th>Not Renewing</th>
                                 <th style="width:20%;">Action</th>
                             </tr>
                         </thead>
@@ -115,26 +113,13 @@
                                     <td data-th="Code">@item.DepartmentName</td>
                                     <td data-th="Code">@item.BranchName</td>
                                     @*<td data-th="Code">@item.Renew</td>
-                                    <td data-th="Code">@item.NotRenewing</td>*@
+                                        <td data-th="Code">@item.NotRenewing</td>*@
 
-                                    @if (item.Renew == true)
-                                    {
-                                        <td data-th="Code">Yes</td>
-                                    }
-                                    else
-                                    {
-                                        <td data-th="Code">No</td>
-                                    }
-                                    @if (item.NotRenewing == true)
-                                    {
-                                        <td data-th="Code">Yes</td>
-                                    }
-                                    else
-                                    {
-                                        <td data-th="Code">No</td>
-                                    }
                                     <td data-th="Action">
                                         <div class="d-flex gap-2">
+                                            <div>
+                                                <a href="javascript:void(0)" onclick="return ViewRenewAndNotRenewing('@item.Idincrept')" class="btn btn-sm btn-primary remove-item-btn">View <i class="fa fa-eye" aria-hidden="true"></i></a>
+                                            </div>
                                             <div class="edit">
                                                 <a href="/HR_RenualAndNonRenwal/RenualAndNonRenwal?Id=@item.Idincrept" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
                                             </div>
@@ -150,6 +135,83 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="RenewAndNotRenewingModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="RenewAndNotRenewingModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="RenewAndNotRenewingModalLabel"><strong>Renual And Non Renwal Details</strong></h5>
+                <button type="button" class="btn-close btn btn-danger" data-bs-dismiss="modal" aria-label="Close" onclick="return RemoveTableRecords();"></button>
+            </div>
+            <div class="modal-body">
+
+
+                <div class="card-body">
+                    <div class="live-preview">
+                        <div class="row gy-4">
+
+                            <fieldset>
+                                <legend style="background-color:#151529">Renual/Non-Renwal Details</legend>
+                                <hr />
+                                <div class="row gy-4" style="margin-bottom:15px;">
+
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Voucher No<code>*</code></label>
+                                        <input type="text" id="txtVoucherNo" class="form-control" readonly="readonly" />
+                                    </div>
+
+
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Employee Name <code>*</code></label>
+                                        <input type="text" id="txtEmployeeName" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Date Of Joined<code>*</code></label>
+                                        <input type="text" id="txtDateOfJoined" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Designation<code>*</code></label>
+                                        <input type="text" id="txtDesignation" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Department<code>*</code></label>
+                                        <input type="text" id="txtDepartment" class="form-control" readonly="readonly" />
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3">
+                                        <label for="labelInput" class="form-label">Branch<code>*</code></label>
+                                        <input type="text" id="txtBranch" class="form-control" readonly="readonly" />
+                                    </div>
+
+                                    <div class="col-xxl-3 col-md-3" style="margin-top:50px;">
+
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="Renew" readonly="readonly" /> Renew</label>
+
+
+                                    </div>
+                                    <div class="col-xxl-3 col-md-3" style="margin-top:50px;">
+
+                                        <label class="form-control"><input type="checkbox" class="row-form" id="NotRenewing" readonly="readonly" /> Not Renewing</label>
+
+
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                @*<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>*@
             </div>
         </div>
     </div>
